# BIOMEDFinal

./: .gitignore  README.md  bci_model_final.pth  chessboard.dwg  connectx_dqn.h5  deep_main.py  dual_main.py  encode_model.py  focal_main.py  local_test.py  main.py  modify_main.py  plot_eeg.py  pyproject.toml  seperate_main.py  train_bci_ai.py
Connect-4-AI-main/: CNNPlayWithSearch.py  Connect4CnnModel.py  MonteGameGen.py  connect4.py  extract_weights.py  final.csv  newMonte.py  weights.npz
Connect-4-AI-main/Kaggle_submission/: main.py
Connect-4-AI-main/monted/: fingerprint.pb  keras_metadata.pb  saved_model.pb
Connect-4-AI-main/monted/variables/: variables.data-00000-of-00001  variables.index
Connect-4-AI-main/raw_data/: 1_0.csv  1_1.csv  1_neg1.csv  2_0.csv  2_1.csv  2_neg1.csv  3_0.csv  3_1.csv  3_neg1.csv  4_0.csv  4_1.csv  4_neg1.csv  5_0.csv  5_1.csv  5_neg1.csv  6_0.csv  6_1.csv  6_neg1.csv  7_0.csv  7_1.csv  7_neg1.csv  8_0.csv  8_1.csv  8_neg1.csv
runs_2/20260510_203833/: bci_model_final.pth  feature_scaler.pkl
